# Plib

./: .gitattributes  .gitignore  README.md  settings.gradle.kts
.github/: pull_request_template.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  alr_runtime_hook.cpp  alr_runtime_interposer.cpp  alr_runtime_launcher.cpp  alr_runtime_trampoline.cpp  proot_candidate.cpp  runtime_plan.cpp  runtime_plan.hpp  runtime_report.cpp  test_command.cpp
app/src/main/cpp/alr_runtime/: alr_config.cpp  alr_config.hpp  alr_elf.cpp  alr_elf.hpp  alr_elf_format.hpp  alr_entry.cpp  alr_entry.hpp  alr_env.cpp  alr_env.hpp  alr_exec.cpp  alr_exec.hpp  alr_handoff.cpp  alr_handoff.hpp  alr_hook.cpp  alr_hook.hpp  alr_image.cpp  alr_image.hpp  alr_interposer.cpp  alr_interposer.hpp  alr_launch.cpp  alr_launch.hpp  alr_path.cpp  alr_path.hpp  alr_trampoline.cpp  alr_trampoline.hpp  alr_transfer.cpp  alr_transfer.hpp
docs/: agent-coordination.md  agent-sync.md  alr-execution-backend-spec.md  alr-runtime-v1-clean-room-spec.md  android-graphics-bridge-spec.md  architecture.md  build-environment.md  clean-room-protocol.md  poc-roadmap.md  product-requirements.md  rootfs-extraction-safety.md
rootfs/: gimp-demo-bundle.lock.json  gimp-demo-profile.json  tiny-rootfs.tar
scripts/: bootstrap-android-build-host.sh  build-guest-gles-shim.sh  build-guest-gui-client.sh  build-guest-path-preload.sh  build-guest-syscall-bench.sh  build-guest-vulkan-probe.sh  test-native-core.sh  validate-host.sh  verify-android-v100-wayland-continuous-gui.sh  verify-android-v101-simple-gui-demo.sh  verify-android-v102-gimp-demo-profile.sh  verify-android-v103-gimp-materialized.sh  verify-android-v104-gimp3-wayland.sh  verify-android-v96-wayland-ahb-surface.sh  verify-android-v97-wayland-ahb-pool.sh  verify-android-v98-wayland-wire-subset.sh  verify-android-v99-wayland-binary-decode.sh
tests/: native_alr_runtime_config_test.cpp  native_alr_runtime_elf_test.cpp  native_alr_runtime_exec_test.cpp  native_alr_runtime_hook_test.cpp  native_alr_runtime_image_test.cpp  native_alr_runtime_interposer_test.cpp  native_alr_runtime_launch_test.cpp  native_alr_runtime_path_test.cpp  native_alr_runtime_trampoline_test.cpp  native_backend_policy_test.cpp  native_runtime_plan_test.cpp  test_alr_runtime_config_sources.py  test_alr_runtime_elf_sources.py  test_alr_runtime_exec_sources.py  test_alr_runtime_hook_sources.py  test_alr_runtime_image_sources.py  (+39 more)
(+41 files in other folders)
